--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^3.0.3"
 flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.0.7"
 flask-login = "^0.6.3"
+mysql-connector-python = "^9.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.7"
